# Final

./: .env  README.md  app.py  auth.py  catsanddog.py  db_config.py  main.py  models.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: azure-webapp.yml  main_firekeyboards.yml
instance/: site.db
routes/: auth.py  shop.py
templates/: base.html  builder.html  builder_preview.html  cart.html  checkout.html  home.html  index.html  login.html  login_success.html  products.html  shop.html  signup.html  signup_success.html  stripe.html  test.html
tests/: app_test.py  test_authentication.py
