[project]
name = "finalxavior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "google>=3.0.0",
    "google-auth>=2.40.1",
    "google-auth-oauthlib>=1.2.2",
    "pyodbc>=5.2.0",
]
